--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: docker pull nichetrainings123/lab:V1.0
+        image: nichetrainings123/lab:V1.0
         ports:
         - containerPort: 80
