--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -4,6 +4,11 @@ metadata:
   name: my-app
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: my-app
@@ -14,6 +19,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: nichetrainings123/lab:V1.0
+        image: nichetrainings123/lab:V3
         ports:
         - containerPort: 80
